NetBSD Problem Report #53525
From wiz@yt.nih.at Wed Aug 15 04:14:19 2018
Return-Path: <wiz@yt.nih.at>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id B7CD77A152
for <gnats-bugs@gnats.NetBSD.org>; Wed, 15 Aug 2018 04:14:19 +0000 (UTC)
Message-Id: <20180815041408.E14EE2AC0D4@yt.nih.at>
Date: Wed, 15 Aug 2018 06:14:08 +0200 (CEST)
From: Thomas Klausner <wiz@NetBSD.org>
Reply-To: Thomas Klausner <wiz@NetBSD.org>
To: gnats-bugs@NetBSD.org
Subject: getsubopt() in wrong header
X-Send-Pr-Version: 3.95
>Number: 53525
>Category: standards
>Synopsis: getsubopt() in wrong header
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: standards-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Aug 15 04:15:00 +0000 2018
>Closed-Date: Fri Jun 21 22:33:08 +0000 2024
>Last-Modified: Fri Jun 21 22:33:08 +0000 2024
>Originator: Thomas Klausner
>Release: NetBSD 8.99.24
>Organization:
Curiosity is the very basis of education and if you tell me that
curiosity killed the cat, I say only that the cat died nobly.
- Arnold Edinborough
>Environment:
Architecture: x86_64
Machine: amd64
>Description:
POSIX says that getsubopt shouldbe in stdlib.h:
http://pubs.opengroup.org/onlinepubs/9699919799/functions/getsubopt.html
On NetBSD, it is in unistd.h though:
https://nxr.netbsd.org/xref/src/include/unistd.h#358
>How-To-Repeat:
Compare the two URLs above.
>Fix:
Move the symbol to the correct header.
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->needs-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 15 Aug 2018 10:22:59 +0000
State-Changed-Why:
Commited, will request pullup after more testing
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/53525 CVS commit: src/include
Date: Wed, 15 Aug 2018 10:21:42 +0000
Module Name: src
Committed By: martin
Date: Wed Aug 15 10:21:42 UTC 2018
Modified Files:
src/include: stdlib.h unistd.h
Log Message:
PR standards/53525: move getsubopt() to stdlib.h
To generate a diff of this commit:
cvs rdiff -u -r1.119 -r1.120 src/include/stdlib.h
cvs rdiff -u -r1.149 -r1.150 src/include/unistd.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/53525 CVS commit: src/lib/libc/stdlib
Date: Wed, 15 Aug 2018 10:49:47 +0000
Module Name: src
Committed By: martin
Date: Wed Aug 15 10:49:47 UTC 2018
Modified Files:
src/lib/libc/stdlib: getsubopt.3
Log Message:
PR standards/53525: move getsubopt to stdlib.h
To generate a diff of this commit:
cvs rdiff -u -r1.15 -r1.16 src/lib/libc/stdlib/getsubopt.3
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: needs-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Fri, 21 Jun 2024 22:33:08 +0000
State-Changed-Why:
8 is eol
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.