PR standards/53525: move getsubopt() to stdlib.h